[package]
name = "sbr"
version = "0.1.0"
authors = ["Maciej Kula"]

[dependencies]
serde = { version = "1.0.0", features = ["rc"] }
serde_derive = "1.0.0"
serde_json = "1.0"
csv = "1.0.0-beta.5"
bincode = "0.9.2"
rand = { version = "0.5.0", features = ["serde1"] }
itertools = "0.7.3"
rayon = "1.0.0"
ndarray = { version = "0.11.0", features = ["blas", "serde-1"] }
blas-src = { version = "0.1.2", default-features = false, features = ["intel-mkl"] }
siphasher = "0.2.2"
failure = "0.1.1"

wyrm = { path = "../wyrm", features = ["fast-math"]}

[dev-dependencies]
criterion = "0.2.3"

[profile.release]
lto = true

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
lto = true
debug = true
