[package]
name = "sbr"
version = "0.2.0"
authors = ["Maciej Kula"]
license = "MIT"
description = "Recommender models."
repository = "https://github.com/maciejkula/sbr-rs"
documentation = "https://docs.rs/sbr/"
readme = "readme.md"
exclude = ["data.csv"]

[badges]
travis-ci = { repository = "maciejkula/sbr-rs", branch = "master" }

[dependencies]
serde = { version = "1.0.0", features = ["rc"] }
serde_derive = "1.0.0"
bincode = "0.9.2"
rand = { version = "0.5.0", features = ["serde1"] }
itertools = "0.7.3"
rayon = "1.0.0"
ndarray = { version = "0.11.0", features = ["serde-1"] }
siphasher = "0.2.2"
failure = "0.1.1"
reqwest = { version = "0.8.6", optional = true }
csv = { version = "1.0.0", optional = true }

wyrm = { version = "0.9.1", features = ["fast-math"]}

[dev-dependencies]
serde_json = "1.0"
csv = "1.0.0"
criterion = "0.2.3"
ndarray = { version = "0.11.0", features = ["blas", "serde-1"] }
blas-src = { version = "0.1.2", default-features = false, features = ["intel-mkl"] }

[features]
default = ["csv", "reqwest"]

[profile.release]
lto = true
rpath = true
debug = true

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
lto = true
debug = true
